@@ -1,0 +1,65 @@
+<ivysettings>
+
+    <!--
+       Licensed to the Apache Software Foundation (ASF) under one or more
+       contributor license agreements.  See the NOTICE file distributed with
+       this work for additional information regarding copyright ownership.
+       The ASF licenses this file to You under the Apache License, Version 2.0
+       (the "License"); you may not use this file except in compliance with
+       the License.  You may obtain a copy of the License at
+
+           http://www.apache.org/licenses/LICENSE-2.0
+
+       Unless required by applicable law or agreed to in writing, software
+       distributed under the License is distributed on an "AS IS" BASIS,
+       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+       See the License for the specific language governing permissions and
+       limitations under the License.
+    -->
+
+    <!--
+    see http://www.jayasoft.org/ivy/doc/configuration
+    -->
+    <!-- you can override this property to use mirrors
+            http://repo1.maven.org/maven2/
+            http://mirrors.dotsrc.org/maven2
+            http://ftp.ggi-project.org/pub/packages/maven2
+            http://mirrors.sunsite.dk/maven2
+            http://public.planetmirror.com/pub/maven2
+            http://ibiblio.lsu.edu/main/pub/packages/maven2
+            http://www.ibiblio.net/pub/packages/maven2
+    -->
+    <property name="repo.maven.org" value="${mvnrepo}" override="true"/>
+    <property name="maven2.pattern"  value="[organisation]/[module]/[revision]/[module]-[revision](-[classifier])"/>
+    <property name="maven2.pattern.ext" value="${maven2.pattern}.[ext]"/>
+    <property name="asfrepo" value="https://repository.apache.org"/>
+    <property name="asfsnapshotrepo" value="${asfrepo}/content/repositories/snapshots"/>
+    <property name="snapshot.pattern"  value="[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]"/>
+    <!-- pull in the local repository -->
+    <include url="${ivy.default.conf.dir}/ivyconf-local.xml"/>
+    <settings defaultResolver="default"/>
+    <resolvers>
+        <ibiblio
+                name="jboss"
+                m2compatible="true"
+                root="https://repository.jboss.org/nexus/content/groups/public"
+                pattern="[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]" />
+
+        <ibiblio name="maven2" root="${repo.maven.org}" pattern="${maven2.pattern.ext}" m2compatible="true"/>
+        <ibiblio name="asf-snapshots" root="${asfsnapshotrepo}" pattern="${snapshot.pattern}" checkmodified="true" m2compatible="true"/>
+        <chain name="default" dual="true">
+            <resolver ref="local"/>
+            <resolver ref="maven2"/>
+            <resolver ref="asf-snapshots"/>
+        </chain>
+        <chain name="internal">
+            <resolver ref="local"/>
+        </chain>
+        <chain name="external">
+            <resolver ref="maven2"/>
+        </chain>
+    </resolvers>
+    <modules>
+        <module organisation="org.apache.incubator/hcatalog" name=".*" resolver="internal"/>
+    </modules>
+</ivysettings>
