@@ -34,6 +34,8 @@ Trunk (unreleased changes)
 Release 0.4.0 - Unreleased
 
   INCOMPATIBLE CHANGES
+  HCAT-295 Rename storage-drivers directory to storage-handlers (gates)
+
   HCAT-264 Barrier for HCatOutputFormat for Pig/Mapreduce if the table contains feature only supported in Hive (daijy via gates)
 
   HCAT-279 Remove remaining code mentioning isd/osd (daijy via gates)
